--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-xlsx": "^0.24.0",
     "nodemon": "^3.0.3"
   }
 }
