--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "swagger": "node ./swagger.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/vikas-tonde/TMS#readme",
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "^1.4.6",
@@ -34,6 +36,12 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-xlsx": "^0.24.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "5.0.1",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.1.0"
   }
 }
