--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "nodemon": "^3.0.3",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "5.0.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "prisma": "^6.1.0"
