--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-xlsx": "^0.24.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.0.3",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "5.0.1",
